--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry excluding="**/*.*" kind="src" path="etc"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry excluding="lib/" kind="src" path="samples"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/findbugs"/>
 	<classpathentry kind="lib" path="lib/asm-tree-3.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/backport-util-concurrent-3.1.jar"/>
