--- a/.project
+++ b/.project
@@ -28,6 +28,15 @@
 	</natures>
 	<filteredResources>
 		<filter>
+			<id>1396707292132</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.class</arguments>
+			</matcher>
+		</filter>
+		<filter>
 			<id>1351977185587</id>
 			<name>samples</name>
 			<type>10</type>
